--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.4",
+    "@angular/animations": "^10.0.4",
+    "@angular/cdk": "^10.0.2",
     "@angular/common": "~10.0.4",
     "@angular/compiler": "~10.0.4",
     "@angular/core": "~10.0.4",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~10.0.4",
+    "@angular/material": "^10.0.2",
     "@angular/platform-browser": "~10.0.4",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
@@ -42,5 +46,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 10.0.3.",
+  "main": "karma.conf.js",
+  "author": "Jay Makwana",
+  "license": "ISC"
 }
